--- a/t2-cacau/package.json
+++ b/t2-cacau/package.json
@@ -1,30 +1,22 @@
 {
   "name": "t2-cacau-app",
   "version": "1.0.0",
-  "description": "T2 Cacau Logistics App with Node.js Backend",
+  "description": "T2 Cacau Logistics App - SharePoint Integration",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview",
-    "server": "node server.js",
-    "start": "node server.js"
+    "preview": "vite preview"
   },
   "dependencies": {
     "@azure/msal-browser": "^3.10.0",
     "@azure/msal-react": "^2.0.12",
-    "axios": "^1.6.7",
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "express": "^4.18.2",
+    "@microsoft/microsoft-graph-client": "^3.0.7",
     "lucide-react": "^0.344.0",
-    "pg": "^8.11.3",
-    "qs": "^6.11.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
-    "@types/node": "^20.11.24",
     "@types/react": "^18.2.64",
     "@types/react-dom": "^18.2.21",
     "@vitejs/plugin-react": "^4.2.1",
