--- a/gerenciamento-de-cargas-t2---cacau/package.json
+++ b/gerenciamento-de-cargas-t2---cacau/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
-    "@azure/msal-browser": "^3.10.0"
+    "@azure/msal-browser": "^3.10.0",
+    "framer-motion": "^11.0.0",
+    "lucide-react": "^0.344.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
