--- a/gerenciamento-de-cargas-t2---cacau/package.json
+++ b/gerenciamento-de-cargas-t2---cacau/package.json
@@ -13,7 +13,7 @@
     "react-dom": "^19.2.3",
     "@azure/msal-browser": "^3.10.0",
     "framer-motion": "^11.0.0",
-    "lucide-react": "^0.344.0"
+    "lucide-react": "0.474.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
